# physman

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
src/: Entity.hpp  Game.cpp  Game.hpp  Js.cpp  Js.hpp  Vec3.hpp  main.cpp
src/math/: Algorithm.cpp  Algorithm.hpp  Constraint.cpp  Constraint.hpp  Force.cpp  Force.hpp  Num.hpp  Physics.cpp  Physics.hpp  Val.cpp  Val.hpp  Vec.hpp
